--- a/frontend/app/templates/products/index.hbs
+++ b/frontend/app/templates/products/index.hbs
@@ -1,12 +1,16 @@
 <div class="row">
-  <div class="col-md-4">Name</div>
-  <div class="col-md-4">Description</div>
-  <div class="col-md-4">Price</div>
+  <div class="col-md-3">Name</div>
+  <div class="col-md-3">Description</div>
+  <div class="col-md-3">Price</div>
+  <div class="col-md-3">Action</div>
 </div>
 {{#each model as |product|}}
   <div class="row">
-    <div class="col-md-4">{{product.name}}</div>
-    <div class="col-md-4">{{product.description}}</div>
-    <div class="col-md-4">{{product.price}}</div>
+    <div class="col-md-3">{{product.name}}</div>
+    <div class="col-md-3">{{product.description}}</div>
+    <div class="col-md-3">{{product.price}}</div>
+    <div class="col-md-3">Edit | Delete</div>
   </div>
 {{/each}}
+<br />
+{{#link-to "products.new" class="btn btn-info"}}Create new product{{/link-to}}
