--- a/frontend/app/templates/products/index.hbs
+++ b/frontend/app/templates/products/index.hbs
@@ -10,8 +10,10 @@
     <div class="col-md-3">{{product.description}}</div>
     <div class="col-md-3">{{product.price}}</div>
     <div class="col-md-3">
-      {{#link-to "products.edit" product.id}}Edit{{/link-to}}
-      | Delete
+      <div class="row">
+        <div class="col-xs-2">{{#link-to "products.edit" product.id}}Edit{{/link-to}}</div>
+        <div class="col-xs-2" style="bottom: 7px; right: 10px;">{{delete-product product=product controller=this}}</div>
+      </div>
     </div>
   </div>
 {{/each}}
