--- a/frontend/app/templates/products/index.hbs
+++ b/frontend/app/templates/products/index.hbs
@@ -4,18 +4,6 @@
   <div class="col-md-3">Price</div>
   <div class="col-md-3">Action</div>
 </div>
-{{#each model as |product|}}
-  <div class="row">
-    <div class="col-md-3">{{product.name}}</div>
-    <div class="col-md-3">{{product.description}}</div>
-    <div class="col-md-3">{{product.price}}</div>
-    <div class="col-md-3">
-      <div class="row">
-        <div class="col-xs-2">{{#link-to "products.edit" product.id}}Edit{{/link-to}}</div>
-        <div class="col-xs-2" style="bottom: 7px; right: 10px;">{{delete-product product=product controller=this}}</div>
-      </div>
-    </div>
-  </div>
-{{/each}}
+{{sorted-products products=model}}
 <br />
 {{#link-to "products.new" class="btn btn-info"}}Create new product{{/link-to}}
