--- a/frontend/app/templates/components/sorted-products.hbs
+++ b/frontend/app/templates/components/sorted-products.hbs
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">{{product.name}}</div>
     <div class="col-md-3">{{product.description}}</div>
-    <div class="col-md-3">{{product.price}}</div>
+    <div class="col-md-3">{{product.displayPrice}}</div>
     <div class="col-md-3">
       <div class="row">
         <div class="col-xs-2">{{#link-to "products.edit" product.id}}Edit{{/link-to}}</div>
