Change action links to buttons.

--- a/frontend/app/templates/components/delete-product.hbs
+++ b/frontend/app/templates/components/delete-product.hbs
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-link" {{action "deleteProduct" on="click"}}>Delete</button>
+<button type="button" class="btn btn-danger" {{action "deleteProduct" on="click"}}>Delete</button>
