--- a/frontend/app/templates/components/sorted-products.hbs
+++ b/frontend/app/templates/components/sorted-products.hbs
@@ -18,7 +18,7 @@
             <div class="col-xs-3">
               {{#link-to "products.edit" product.id tagName='button' class='btn btn-success'}}Edit{{/link-to}}
             </div>
-            <div class="col-xs-2">{{delete-product product=product controller=this}}</div>
+            <div class="col-xs-2">{{delete-product product=product controller=this.controller}}</div>
           </div>
         </td>
       </tr>
